--- a/app/assets/stylesheets/views/cameras/single/_live.scss
+++ b/app/assets/stylesheets/views/cameras/single/_live.scss
@@ -75,14 +75,6 @@
 
 #live-view-placeholder .pull-right {
   table tbody {
-    td {
-      padding-left: 3px;
-    }
-  }
-}
-
-#live-view-placeholder .pull-right {
-  table tbody {
     td .form-control {
       -webkit-appearance: none;
       -moz-appearance: none;
@@ -93,6 +85,8 @@
       font-weight: bold !important;
       color: #ffffff !important;
       border: none !important;
+      padding-left: 0px;
+      padding-right: 14px;
     }
   }
 }
@@ -104,7 +98,7 @@
   font-style: normal;
   font-weight: normal;
   line-height: 1;
-  margin-top: -26px;
+  margin-top: -25px;
 }
 
 #live-view-placeholder .pull-right {
